@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Model::DBIC::Schema
 
+        - support for coderef connect_info's
+
 0.28  Thu Aug 27 08:14:05 EDT 2009
         - autobox issues in dep chain, bump CX::Component::Traits dep
         (caelum)
